# semantiva-optimize

./: CHANGELOG.md  README.md  ci_pipeline.sh  pyproject.toml
.github/workflows/: ci-pipeline.yaml  version.txt
docs/: constraints-and-bounds.md  controllers.md  getting-started.md  progress-observers.md
examples/: multistart_local.yaml  nelder_mead_poly.yaml  polynomial_progress.yaml  polyroot_local.yaml  quadratic_local.yaml
scripts/: __init__.py  add_license.py  check_license_headers.py
semantiva_optimize/: __init__.py  config_preprocessor.py  constraints.py  descriptors.py  extension.py  factory.py  param_resolvers.py  termination.py
semantiva_optimize/adapters/: __init__.py  controller_adapter.py  model_adapter.py
semantiva_optimize/examples/: __init__.py  models.py  polynomial_progress_live.py
semantiva_optimize/processors/: __init__.py  optimizer_processor.py
semantiva_optimize/progress/: __init__.py  base.py  cost.py  poly.py
semantiva_optimize/strategies/: __init__.py  _scipy_shim.py  local_convex.py  nelder_mead.py
tests/: conftest.py  test_config_preprocessor.py  test_constraints_builder.py  test_controller_alias.py  test_local_convex_poly_root.py  test_local_convex_quadratic.py  test_logging_and_factories.py  test_multi_start_fanin.py  test_nelder_mead_poly_root.py  test_optional_floatdatatype.py  test_param_resolvers.py  test_pipeline_patterns.py  test_progress_demo_alignment.py  test_progress_headless_png.py  test_progress_observer_calls.py  test_progress_streaming.py  test_progress_throttle.py  test_progress_title_and_lines.py  test_progress_yaml_smoke.py  test_safe_guard.py
